--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 				renderer.setClearColor( 0xeef8fc );
 				document.body.appendChild( renderer.domElement );
 				
-				var fog = new THREE.Fog();
-				scene.add(fog);
+				scene.fog = new THREE.Fog(0xdedede, 1, 1000);
 				
 				var loader= new THREE.JSONLoader();
 				loader.load( 'cube.json', function(geometry) {
