--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 				var light = new THREE.AmbientLight( 0x404040 ); // soft white light
 				scene.add( light );
 				
-				var light = new THREE.PointLight( 0xff0000, 1, 100 );
-				light.position.set( 50, 50, 50 );
-				scene.add( light );
+				var pointLight = new THREE.PointLight( 0xff0000, 1, 100 );
+				light.position.set( 5, 5, 5 );
+				scene.add( pointLight );
 				
 				var loader= new THREE.JSONLoader();
 				loader.load( 'cube.json', function(geometry) {
