--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				scene.add( light );
 				
 				var pointLight = new THREE.PointLight( 0xff0000, 1, 100 );
-				light.position.set( 5, 5, 5 );
+				pointLight.position.set( 5, 5, 5 );
 				scene.add( pointLight );
 				
 				var loader= new THREE.JSONLoader();
