--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				scene.add( pointLight );
 				
 				var loader= new THREE.JSONLoader();
-				loader.load( 'cube.json', function(geometry) {
+				loader.load( 'shape.json', function(geometry) {
 					mesh = new THREE.Mesh( geometry, new THREE.MeshPhongMaterial( { color: 0x2194ce, specular: 0x111111, shininess: 30 } ) );
 					scene.add( mesh );
 					
