--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 			<input type="range" value="0" min="0" max="100" onInput="mesh.morphTargetInfluences[1] = this.value/100;">
 			<input type="range" value="0" min="0" max="100" onInput="mesh.morphTargetInfluences[2] = this.value/100;">
 			<input type="range" value="0" min="0" max="100" onInput="mesh.morphTargetInfluences[3] = this.value/100;">
+			<input type="range" value="0" min="0" max="100" onInput="mesh.morphTargetInfluences[4] = this.value/100;">
+			<input type="range" value="0" min="0" max="100" onInput="mesh.morphTargetInfluences[5] = this.value/100;">
+			<input type="range" value="0" min="0" max="100" onInput="mesh.morphTargetInfluences[6] = this.value/100;">
 		</div>		
 		<script src="three.js"></script>
 		<script src="script.js"></script>
