--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 			<!--<input type="range" value="0" min="0" max="100" onInput="mesh.morphTargetInfluences[4] = this.value/100;">
 			<input type="range" value="0" min="0" max="100" onInput="mesh.morphTargetInfluences[5] = this.value/100;">
 			<input type="range" value="0" min="0" max="100" onInput="mesh.morphTargetInfluences[6] = this.value/100;">-->
+			<button type="button" onclick="setLetter(1)>A</button>
 		</div>		
 		<script src="three.js"></script>
 		<script src="script.js"></script>
