Changed animation logic and added FER button

--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
 	</head>
 	<body>
 		<div id="ctrl">
-			<input type="range" value="0" min="0" max="100" onInput="mesh.morphTargetInfluences[1] = this.value/100;">
+			<!--<input type="range" value="0" min="0" max="100" onInput="mesh.morphTargetInfluences[1] = this.value/100;">
 			<input type="range" value="0" min="0" max="100" onInput="mesh.morphTargetInfluences[2] = this.value/100;">
 			<input type="range" value="0" min="0" max="100" onInput="mesh.morphTargetInfluences[3] = this.value/100;">
-			<!--<input type="range" value="0" min="0" max="100" onInput="mesh.morphTargetInfluences[4] = this.value/100;">
+			<input type="range" value="0" min="0" max="100" onInput="mesh.morphTargetInfluences[4] = this.value/100;">
 			<input type="range" value="0" min="0" max="100" onInput="mesh.morphTargetInfluences[5] = this.value/100;">
 			<input type="range" value="0" min="0" max="100" onInput="mesh.morphTargetInfluences[6] = this.value/100;">-->
 			<button type="button" onclick="setLetter(1)">A</button>
+			<button type="button" onclick="setLetter([5, 4, 6])">FER</button>
 		</div>		
 		<script src="three.js"></script>
 		<script src="script.js"></script>
