--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 			<input type="range" value="0" min="0" max="100" onInput="mesh.morphTargetInfluences[5] = this.value/100;">
 			<input type="range" value="0" min="0" max="100" onInput="mesh.morphTargetInfluences[6] = this.value/100;">-->
 			<button type="button" onclick="setLetter(1)">A</button>
-			<button type="button" onclick="setLetter([5, 4, 6])">FER</button>
+			<button type="button" onclick="setLetter(2)">O</button>
+			<button type="button" onclick="setLetter(3)">U</button>
+			<button type="button" onclick="setLetter(5, 4, 6)">FER</button>
 		</div>		
 		<script src="three.js"></script>
 		<script src="script.js"></script>
