Added textbox for inputing custom words

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 			<button type="button" onclick="setLetter(2)">O</button>
 			<button type="button" onclick="setLetter(3)">U</button>
 			<button type="button" onclick="setLetter(5, 4, 6)">FER</button>
+			<input id="text_input" type="text"></input><button type="button" onclick="sayText(document.getElementById('text_input').value">Izgovori</button>
 		</div>		
 		<script src="three.js"></script>
 		<script src="script.js"></script>
