Minor style changes

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 				font-size: 13px;
 				z-index: 100;
 			}
+			#text_input {
+				margin-top: 15px;
+			}
 		</style>
 	</head>
 	<body>
@@ -39,7 +42,8 @@
 			<button type="button" onclick="setLetter(2)">O</button>
 			<button type="button" onclick="setLetter(3)">U</button>
 			<button type="button" onclick="setLetter(5, 4, 6)">FER</button>
-			<input id="text_input" type="text"></input><button type="button" onclick="sayText(document.getElementById('text_input').value)">Izgovori</button>
+			<input id="text_input" type="text"></input>
+			<input type="button" value="Izgovori" onclick="sayText(document.getElementById('text_input').value)"></input>
 		</div>		
 		<script src="three.js"></script>
 		<script src="script.js"></script>
