Renamed setLetter function

--- a/index.html
+++ b/index.html
@@ -32,16 +32,10 @@
 	</head>
 	<body>
 		<div id="ctrl">
-			<!--<input type="range" value="0" min="0" max="100" onInput="mesh.morphTargetInfluences[1] = this.value/100;">
-			<input type="range" value="0" min="0" max="100" onInput="mesh.morphTargetInfluences[2] = this.value/100;">
-			<input type="range" value="0" min="0" max="100" onInput="mesh.morphTargetInfluences[3] = this.value/100;">
-			<input type="range" value="0" min="0" max="100" onInput="mesh.morphTargetInfluences[4] = this.value/100;">
-			<input type="range" value="0" min="0" max="100" onInput="mesh.morphTargetInfluences[5] = this.value/100;">
-			<input type="range" value="0" min="0" max="100" onInput="mesh.morphTargetInfluences[6] = this.value/100;">-->
-			<button type="button" onclick="setLetter(1)">A</button>
-			<button type="button" onclick="setLetter(2)">O</button>
-			<button type="button" onclick="setLetter(3)">U</button>
-			<button type="button" onclick="setLetter(5, 4, 6)">FER</button>
+			<button type="button" onclick="fillBuffer(1)">A</button>
+			<button type="button" onclick="fillBuffer(2)">O</button>
+			<button type="button" onclick="fillBuffer(3)">U</button>
+			<button type="button" onclick="fillBuffer(5, 4, 6)">FER</button>
 			<input id="text_input" type="text"></input>
 			<input type="button" value="Izgovori" onclick="sayText(document.getElementById('text_input').value)"></input>
 		</div>		
